--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3e4787b3e8561805eebedb43c90a4a50"></script>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>작업중인 페이지</title>
   </head>
   <body>
     <div id="root"></div>
